--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,31 +1,38 @@
-cmake_minimum_required(VERSION 2.8)
-
-SET(CMAKE_CXX_COMPILER "mpic++")
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -pthread")
+cmake_minimum_required(VERSION 3.1)
 
 project(tausch)
 
+# Default MPI compiler
+SET(CMAKE_CXX_COMPILER "mpic++")
+
+# Enable C++11 and optimisations
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")
+
+# find MPI
 find_package(MPI REQUIRED)
 include_directories(${MPI_INCLUDE_PATH})
 
+# find OpenCL
 find_package(OpenCL REQUIRED)
 include_directories(${OPENCL_INCLUDE_DIRS})
 
-set(CMAKE_BUILD_TYPE "Debug")
-
-include_directories("include")
-
+# fine OpenMP
 find_package(OpenMP)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 
-add_executable(tausch "main.cpp" "tausch.cpp" "sample.cpp" "kernels.cl")
+# Create library
+add_library(tausch SHARED "tausch.cpp")
 
+# Install library
+install(TARGETS ${PROJECT_NAME} DESTINATION "lib")
+
+# Install library headers
+file(GLOB HEADERS "tausch.h")
+install(FILES "tausch.h" DESTINATION "include")
+
+# link libraries
 target_link_libraries(tausch ${MPI_LIBRARIES})
 target_link_libraries(tausch ${OPENCL_LIBRARIES})
 set_target_properties(tausch PROPERTIES COMPILE_FLAGS "${MPI_COMPILE_FLAGS}")
-set_target_properties(tausch PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS} -lOpenCL")
-
-add_definitions(-DSOURCEDIR="${CMAKE_SOURCE_DIR}")
-
-
+set_target_properties(tausch PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
