--- a/csamplecode/CMakeLists.txt
+++ b/csamplecode/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
 SET(CMAKE_CXX_COMPILER "mpicc")
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 
 project(csample)
 
