--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,13 +28,14 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 
 # Create library
-add_library(tausch SHARED "tausch.cpp" "ctausch.cpp")
-add_library(tausch_static STATIC "tausch.cpp" "ctausch.cpp")
+add_library(tausch SHARED "tausch.h" "2d/_tausch2d.cpp" "2d/_ctausch2d.cpp")
+add_library(tausch_static STATIC "tausch.h" "2d/_tausch2d.cpp" "2d/_ctausch2d.cpp")
 
 # Install library
 install(TARGETS tausch DESTINATION "lib")
 install(TARGETS tausch_static DESTINATION "lib")
 
 # Install library headers
-install(FILES "tausch.h" DESTINATION "include")
-install(FILES "ctausch.h" DESTINATION "include")
+install(FILES "tausch.h" DESTINATION "include/tausch")
+install(FILES "2d/_tausch2d.h" "2d/_ctausch2d.h" DESTINATION "include/tausch/2d")
+
