[Doxygen] Add doxygen stuff to CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.1)
 
 project(tausch)
 
+set(CMAKE_PROJECT_NAME "Tausch - A general halo exchange library")
+
 # Default MPI compiler
 SET(CMAKE_CXX_COMPILER "mpic++")
 
@@ -27,9 +29,18 @@ find_package(OpenMP)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 
+# All headers and source files
+set(tausch_headers "tausch.h" "modules/tausch2d.h" "/modules/tausch3d.h" "/modules/ctausch2d.h" "/modules/ctausch3d.h")
+set(tausch_source "tausch.h" "modules/tausch2d.cpp" "modules/tausch3d.cpp" "modules/ctausch2d.cpp" "modules/ctausch3d.cpp")
+
+# Turn semicolon separated list into spaces separated list for doxgen
+foreach(arg ${tausch_headers})
+    set(doxygen_headers "${doxygen_headers} ${CMAKE_CURRENT_SOURCE_DIR}/${arg}")
+endforeach(arg ${tausch_headers})
+
 # Create library
-add_library(tausch SHARED "tausch.h" "modules/tausch2d.cpp" "modules/tausch3d.cpp" "modules/ctausch2d.cpp")
-add_library(tausch_static STATIC "tausch.h" "modules/tausch2d.cpp" "modules/tausch3d.cpp" "modules/ctausch2d.cpp")
+add_library(tausch SHARED ${tausch_source})
+add_library(tausch_static STATIC ${tausch_source})
 
 # Install library
 install(TARGETS tausch DESTINATION "lib")
@@ -37,4 +48,26 @@ install(TARGETS tausch_static DESTINATION "lib")
 
 # Install library headers
 install(FILES "tausch.h" DESTINATION "include/tausch")
-install(FILES "modules/tausch2d.h" "modules/ctausch2d.h" "modules/tausch3d.h" DESTINATION "include/tausch/modules")
+install(FILES "modules/tausch2d.h" "modules/ctausch2d.h" "modules/tausch3d.h" "modules/ctausch3d.h" DESTINATION "include/tausch/modules")
+
+# build documentation (if enabled)
+find_package(Doxygen)
+option(DOC "Create and install the HTML based API documentation (requires Doxygen)" ${DOXYGEN_FOUND})
+if(DOC)
+    if(NOT DOXYGEN_FOUND)
+        message(FATAL_ERROR "Doxygen is needed to build the documentation.")
+    endif()
+
+    set(doxyfile_in ${CMAKE_CURRENT_SOURCE_DIR}/doxygen/Doxyfile)
+    set(doxyfile ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile.bin)
+
+    configure_file(${doxyfile_in} ${doxyfile} @ONLY)
+
+    add_custom_target(doc ALL
+        COMMAND ${DOXYGEN_EXECUTABLE} ${doxyfile}
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+        COMMENT "Generating API documentation with Doxygen"
+        VERBATIM)
+
+    install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doc/html DESTINATION share/doc/tausch)
+endif()
