--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,9 +19,9 @@ include_directories(${MPI_INCLUDE_PATH})
 
 # find OpenCL
 if(OPENCL)
-    find_package(OpenCL REQUIRED)
-    include_directories(${OPENCL_INCLUDE_DIRS})
-    ADD_DEFINITIONS(-DTAUSCH_OPENCL)
+#    find_package(OpenCL REQUIRED)
+#    include_directories(${OPENCL_INCLUDE_DIRS})
+#    ADD_DEFINITIONS(-DTAUSCH_OPENCL)
 else(not OPENCL)
     remove_definitions(-DTAUSCH_OPENCL)
 endif(OPENCL)
@@ -33,7 +33,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 
 # All headers and source files
 set(tausch_headers "tausch.h" "modules/tausch1d.h" "modules/tausch2d.h" "modules/tausch3d.h" "modules/ctausch2d.h" "modules/ctausch3d.h" "modules/tausch.h")
-set(tausch_source "tausch.h" "modules/tausch1d.cpp" "modules/tausch2d.cpp" "modules/tausch3d.cpp" "modules/ctausch2d.cpp" "modules/ctausch3d.cpp" "modules/tausch.h")
+set(tausch_source "tausch.h" "modules/tausch1d.cpp" "modules/tausch2d.cpp" "modules/tausch3d.cpp" "modules/ctausch2d.cpp" "modules/ctausch3d.cpp")
 
 # Turn semicolon separated list into spaces separated list for doxgen
 foreach(arg ${tausch_headers})
