--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,8 +32,10 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 
 # All headers and source files
-set(tausch_headers "tausch.h" "modules/tausch1d.h" "modules/tausch2d.h" "modules/tausch3d.h" "modules/ctausch.h" "modules/tausch.h")
-set(tausch_source "tausch.h" "modules/tausch1d.cpp" "modules/tausch2d.cpp" "modules/tausch3d.cpp" "modules/ctausch.cpp")
+set(tausch_headers "tausch.h" "modules/tausch1d.h" "modules/tausch2d.h" "modules/tausch3d.h" "modules/ctauschdouble.h" "modules/ctauschfloat.h"
+    "modules/ctauschint.h" "modules/tausch.h")
+set(tausch_source "tausch.h" "modules/tausch1d.cpp" "modules/tausch2d.cpp" "modules/tausch3d.cpp" "modules/ctauschdouble.cpp"
+    "modules/ctauschfloat.cpp" "modules/ctauschint.cpp")
 
 # Turn semicolon separated list into spaces separated list for doxgen
 foreach(arg ${tausch_headers})
@@ -50,7 +52,8 @@ install(TARGETS tausch_static DESTINATION "lib")
 
 # Install library headers
 install(FILES "tausch.h" DESTINATION "include/tausch")
-install(FILES "modules/tausch1d.h" "modules/tausch2d.h" "modules/tausch3d.h" "modules/ctausch.h" "modules/tausch.h" DESTINATION "include/tausch/modules")
+install(FILES "modules/tausch1d.h" "modules/tausch2d.h" "modules/tausch3d.h" "modules/ctauschdouble.h" "modules/ctauschfloat.h" "modules/ctauschint.h"
+        "modules/tausch.h" DESTINATION "include/tausch/modules")
 
 # build documentation (if enabled)
 find_package(Doxygen)
