--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,26 +26,24 @@ else(not OPENCL)
     configure_file("${CMAKE_CURRENT_SOURCE_DIR}/modules/tausch_opencl_no.h" "${CMAKE_CURRENT_SOURCE_DIR}/modules/tausch_opencl.h" COPYONLY)
 endif(OPENCL)
 
-# fine OpenMP
+# find OpenMP
 find_package(OpenMP)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 
 # All headers and source files
-#set(tausch_headers "tausch.h" "modules/tausch1d.h" "modules/tausch2d.h" "modules/tausch3d.h" "modules/ctausch/ctauschdouble.h"
-#    "modules/ctausch/ctauschfloat.h" "modules/ctausch/ctauschint.h" "modules/ctausch/ctauschunsignedint.h" "modules/ctausch/ctauschbool.h"
-#    "modules/tausch.h" "modules/tausch_opencl_no.h" "modules/tausch_opencl_yes.h")
-#set(tausch_source "tausch.h" "modules/tausch1d.cpp" "modules/tausch2d.cpp" "modules/tausch3d.cpp" "modules/ctausch/ctauschdouble.cpp"
-#    "modules/ctausch/ctauschfloat.cpp" "modules/ctausch/ctauschint.cpp" "modules/ctausch/ctauschunsignedint.cpp" "modules/ctausch/ctauschbool.cpp"
-#    "modules/tausch.h" "modules/tausch_opencl_no.h" "modules/tausch_opencl_yes.h")
+set(tausch_headers "tausch.h" "modules/tausch1d.h" "modules/tausch2d.h" "modules/tausch3d.h"
+    "modules/ctausch/ctauschdouble.h" "modules/ctausch/ctauschfloat.h" "modules/ctausch/ctauschint.h" "modules/ctausch/ctauschunsignedint.h"
+    "modules/tausch.h" "modules/tausch_opencl_no.h" "modules/tausch_opencl_yes.h")
+set(tausch_source "tausch.h" "modules/tausch1d.cpp" "modules/tausch2d.cpp" "modules/tausch3d.cpp"
+    "modules/ctausch/ctauschdouble.cpp" "modules/ctausch/ctauschfloat.cpp" "modules/ctausch/ctauschint.cpp" "modules/ctausch/ctauschunsignedint.cpp"
+    "modules/tausch.h" "modules/tausch_opencl_no.h" "modules/tausch_opencl_yes.h")
 
-set(tausch_headers "tausch.h" "modules/tausch1d.h" "modules/tausch2d.h" "modules/tausch3d.h" "modules/tausch.h" "modules/tausch_opencl_no.h" "modules/tausch_opencl_yes.h" "modules/tausch_opencl.h")
-set(tausch_source "tausch.h" "modules/tausch1d.cpp" "modules/tausch2d.cpp" "modules/tausch3d.cpp" "modules/tausch.h" "modules/tausch_opencl_no.h" "modules/tausch_opencl.h" "modules/tausch_opencl_yes.h")
-
-# Turn semicolon separated list into spaces separated list for doxgen
-foreach(arg ${tausch_headers})
+# Set the Doxygen list
+set(list_for_doxygen_headers "tausch.h" "modules/tausch1d.h" "modules/tausch2d.h" "modules/tausch3d.h" "modules/tausch.h")
+foreach(arg ${list_for_doxygen_headers})
     set(doxygen_headers "${doxygen_headers} ${CMAKE_CURRENT_SOURCE_DIR}/${arg}")
-endforeach(arg ${tausch_headers})
+endforeach(arg ${list_for_doxygen_headers})
 
 # Create library
 add_library(tausch SHARED ${tausch_source})
@@ -60,7 +58,6 @@ install(FILES "tausch.h" DESTINATION "include/tausch")
 install(FILES "modules/tausch1d.h" "modules/tausch2d.h" "modules/tausch3d.h" "modules/tausch.h" "modules/tausch_opencl.h"
         DESTINATION "include/tausch/modules")
 install(FILES "modules/ctausch/ctauschdouble.h" "modules/ctausch/ctauschfloat.h" "modules/ctausch/ctauschint.h" "modules/ctausch/ctauschunsignedint.h"
-        "modules/ctausch/ctauschbool.h"
         DESTINATION "include/tausch/modules/ctausch")
 
 # build documentation (if enabled)
