--- a/samplecode1d/CMakeLists.txt
+++ b/samplecode1d/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.1)
 
 SET(CMAKE_CXX_COMPILER "mpic++")
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -g")
 
 project(sample1d)
 
@@ -10,29 +10,29 @@ include_directories(${MPI_INCLUDE_PATH})
 
 set(CMAKE_BUILD_TYPE "Debug")
 
+option(OPENCL "Enable OpenCL support" ON)
+
+# find OpenCL
 if(OPENCL)
     find_package(OpenCL REQUIRED)
     include_directories(${OPENCL_INCLUDE_DIRS})
+    ADD_DEFINITIONS(-DOPENCL)
 endif(OPENCL)
 
 find_package(OpenMP)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 
-option(OPENCL "Enable OpenCL support" ON)
-
 add_executable(sample1d "sample.cpp" "main.cpp")
 
-# find OpenCL
 if(OPENCL)
-    find_package(OpenCL REQUIRED)
-    include_directories(${OPENCL_INCLUDE_DIRS})
     target_link_libraries(sample1d "OpenCL")
-    ADD_DEFINITIONS(-DOPENCL)
 endif(OPENCL)
 
 target_link_libraries(sample1d ${MPI_LIBRARIES})
 target_link_libraries(sample1d "tausch")
+target_link_libraries(sample1d "atomic")
 set_target_properties(sample1d PROPERTIES COMPILE_FLAGS "${MPI_COMPILE_FLAGS}")
 set_target_properties(sample1d PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
+
 
