--- a/oldtausch/driver/CMakeLists.txt
+++ b/oldtausch/driver/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 2.8)
 project(tauschdriver)
 
 set(CMAKE_CXX_COMPILER "mpic++")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O0 -g")
 
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/../modules/tausch_opencl_no.h" "${CMAKE_CURRENT_SOURCE_DIR}/../modules/tausch_opencl.h" COPYONLY)
 
