combine tausch into single header, base all communication on mpi, functions do not depend on counterpart anymore (e.g., a sending cpu doesn't need to know where the data is going to anymore), add CUDA support, update testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,47 +2,101 @@ cmake_minimum_required(VERSION 3.1)
 
 project(tausch)
 
-set(CMAKE_PROJECT_NAME "Tausch - A general halo exchange library")
-
-# Dummy stuff to make them show up in my IDE -> not actually needed!
-set(tausch_files "tauschdefs.h" "tausch.h" "tausch_c2c.h" "tausch_c2g.h" "tausch_g2c.h" "tausch_g2g.h")
-add_library(tausch SHARED ${tausch_files})
-set_target_properties(tausch PROPERTIES LINKER_LANGUAGE CXX)
-
-# Install library headers
-install(FILES "tausch.h" "tausch_c2c.h" "tausch_c2g.h" "tausch_g2c.h" "tausch_g2g.h" "tauschdefs.h"
-        DESTINATION "include/tausch")
+install(FILES "tausch.h" DESTINATION "include")
 
 option(TESTING "Enable Unit Tests" ON)
 
-set(CMAKE_BUILD_TYPE "Debug")
-
 if(TESTING)
+
     enable_testing()
+
+    set(CMAKE_BUILD_TYPE "Debug")
+
     find_package(MPI REQUIRED)
+    find_package(CUDA REQUIRED)
+    find_package(OpenCL REQUIRED)
 
-    add_executable(testing_c2c testing/c2c.cpp)
-    target_link_libraries(testing_c2c "${MPI_C_LIBRARIES}")
-    target_link_libraries(testing_c2c "${MPI_CXX_LIBRARIES}")
-    add_test(testing_c2c testing_c2c)
+    # cpu -> cpu
+    add_executable(testing_cpu2cpu testing/cpu2cpu.cpp)
+    target_include_directories(testing_cpu2cpu PUBLIC "${MPI_C_INCLUDE_DIRS}")
+    target_link_libraries(testing_cpu2cpu "${MPI_C_LIBRARIES}")
+    target_link_libraries(testing_cpu2cpu "${MPI_CXX_LIBRARIES}")
+    add_test(cpu2cpu testing_cpu2cpu)
 
-    add_executable(testing_c2g testing/c2g.cpp)
-    target_link_libraries(testing_c2g "${MPI_C_LIBRARIES}")
-    target_link_libraries(testing_c2g "${MPI_CXX_LIBRARIES}")
-    target_link_libraries(testing_c2g "OpenCL")
-    add_test(testing_c2g testing_c2g)
+    # cpu -> opencl
+    add_executable(testing_cpu2ocl testing/cpu2ocl.cpp)
+    target_include_directories(testing_cpu2ocl PUBLIC "${MPI_C_INCLUDE_DIRS}")
+    target_link_libraries(testing_cpu2ocl "${MPI_C_LIBRARIES}")
+    target_link_libraries(testing_cpu2ocl "${MPI_CXX_LIBRARIES}")
+    target_include_directories(testing_cpu2ocl PUBLIC "${OpenCL_INCLUDE_DIR}")
+    target_link_libraries(testing_cpu2ocl "${OpenCL_LIBRARY}")
+    add_test(cpu2ocl testing_cpu2ocl)
 
-    add_executable(testing_g2c testing/g2c.cpp)
-    target_link_libraries(testing_g2c "${MPI_C_LIBRARIES}")
-    target_link_libraries(testing_g2c "${MPI_CXX_LIBRARIES}")
-    target_link_libraries(testing_g2c "OpenCL")
-    add_test(testing_g2c testing_g2c)
+    # cpu -> cuda
+    add_executable(testing_cpu2cuda testing/cpu2cuda.cpp)
+    target_include_directories(testing_cpu2cuda PUBLIC "${MPI_C_INCLUDE_DIRS}")
+    target_link_libraries(testing_cpu2cuda "${MPI_C_LIBRARIES}")
+    target_link_libraries(testing_cpu2cuda "${MPI_CXX_LIBRARIES}")
+    target_include_directories(testing_cpu2cuda PUBLIC "${CUDA_INCLUDE_DIRS}")
+    target_link_libraries(testing_cpu2cuda "${CUDA_LIBRARIES}")
+    add_test(cpu2cuda testing_cpu2cuda)
 
-    add_executable(testing_g2g testing/g2g.cpp)
-    target_link_libraries(testing_g2g "${MPI_C_LIBRARIES}")
-    target_link_libraries(testing_g2g "${MPI_CXX_LIBRARIES}")
-    target_link_libraries(testing_g2g "OpenCL")
-    add_test(testing_g2g testing_g2g)
+    # opencl -> cpu
+    add_executable(testing_ocl2cpu testing/ocl2cpu.cpp)
+    target_include_directories(testing_ocl2cpu PUBLIC "${MPI_C_INCLUDE_DIRS}")
+    target_link_libraries(testing_ocl2cpu "${MPI_C_LIBRARIES}")
+    target_link_libraries(testing_ocl2cpu "${MPI_CXX_LIBRARIES}")
+    target_include_directories(testing_ocl2cpu PUBLIC "${OpenCL_INCLUDE_DIR}")
+    target_link_libraries(testing_ocl2cpu "${OpenCL_LIBRARY}")
+    add_test(ocl2cpu testing_ocl2cpu)
 
-endif(TESTING)
+    # opencl -> opencl
+    add_executable(testing_ocl2ocl testing/ocl2ocl.cpp)
+    target_include_directories(testing_ocl2ocl PUBLIC "${MPI_C_INCLUDE_DIRS}")
+    target_link_libraries(testing_ocl2ocl "${MPI_C_LIBRARIES}")
+    target_link_libraries(testing_ocl2ocl "${MPI_CXX_LIBRARIES}")
+    target_include_directories(testing_ocl2ocl PUBLIC "${OpenCL_INCLUDE_DIR}")
+    target_link_libraries(testing_ocl2ocl "${OpenCL_LIBRARY}")
+    add_test(ocl2ocl testing_ocl2ocl)
 
+    # opencl -> cuda
+    add_executable(testing_ocl2cuda testing/ocl2cuda.cpp)
+    target_include_directories(testing_ocl2cuda PUBLIC "${MPI_C_INCLUDE_DIRS}")
+    target_link_libraries(testing_ocl2cuda "${MPI_C_LIBRARIES}")
+    target_link_libraries(testing_ocl2cuda "${MPI_CXX_LIBRARIES}")
+    target_include_directories(testing_ocl2cuda PUBLIC "${CUDA_INCLUDE_DIRS}")
+    target_link_libraries(testing_ocl2cuda "${CUDA_LIBRARIES}")
+    target_include_directories(testing_ocl2cuda PUBLIC "${OpenCL_INCLUDE_DIR}")
+    target_link_libraries(testing_ocl2cuda "${OpenCL_LIBRARY}")
+    add_test(ocl2cuda testing_ocl2cuda)
+
+    # cuda -> cpu
+    add_executable(testing_cuda2cpu testing/cuda2cpu.cpp)
+    target_include_directories(testing_cuda2cpu PUBLIC "${MPI_C_INCLUDE_DIRS}")
+    target_link_libraries(testing_cuda2cpu "${MPI_C_LIBRARIES}")
+    target_link_libraries(testing_cuda2cpu "${MPI_CXX_LIBRARIES}")
+    target_include_directories(testing_cuda2cpu PUBLIC "${CUDA_INCLUDE_DIRS}")
+    target_link_libraries(testing_cuda2cpu "${CUDA_LIBRARIES}")
+    add_test(cuda2cpu testing_cuda2cpu)
+
+    # cuda -> opencl
+    add_executable(testing_cuda2ocl testing/cuda2ocl.cpp)
+    target_include_directories(testing_cuda2ocl PUBLIC "${MPI_C_INCLUDE_DIRS}")
+    target_link_libraries(testing_cuda2ocl "${MPI_C_LIBRARIES}")
+    target_link_libraries(testing_cuda2ocl "${MPI_CXX_LIBRARIES}")
+    target_include_directories(testing_cuda2ocl PUBLIC "${CUDA_INCLUDE_DIRS}")
+    target_link_libraries(testing_cuda2ocl "${CUDA_LIBRARIES}")
+    target_include_directories(testing_cuda2ocl PUBLIC "${OpenCL_INCLUDE_DIR}")
+    target_link_libraries(testing_cuda2ocl "${OpenCL_LIBRARY}")
+    add_test(cuda2ocl testing_cuda2ocl)
+
+    # cuda -> cuda
+    add_executable(testing_cuda2cuda testing/cuda2cuda.cpp)
+    target_include_directories(testing_cuda2cuda PUBLIC "${MPI_C_INCLUDE_DIRS}")
+    target_link_libraries(testing_cuda2cuda "${MPI_C_LIBRARIES}")
+    target_link_libraries(testing_cuda2cuda "${MPI_CXX_LIBRARIES}")
+    target_include_directories(testing_cuda2cuda PUBLIC "${CUDA_INCLUDE_DIRS}")
+    target_link_libraries(testing_cuda2cuda "${CUDA_LIBRARIES}")
+    add_test(cuda2cuda testing_cuda2cuda)
+
+endif()
